# Newz_Shortie

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  api_key.py  app.py  config_and_start_nginx.sh  deployment.yaml  nginx.conf.template  pyproject.toml  randomNiche.py  requirements.txt
.github/workflows/: cd.yaml  ci.yaml  flask-cli.yaml
templates/: 404.html  about.html  common_niche.html  footer.html  home.html  layout.html  nav.html  recent_news.html
tests/: conftest.py  test_api.py  test_routes.py  test_utils.py
